Revision history for Test-BrewBuild

1.04    xxx
        - added t/dev-1xx tests, need perlbrew/berrybrew installed to run. Set
          BBDEV_TESTING environment variable to run these tests
        - added Archive::Extract prereq for BBDEV_TESTING
        - fixed bug where --version wasn't doing anything
        - fixed bug on Windows where instance_remove() was removing the
          currently in-use perl instance
        - if an invalid arg is sent in to 'berrybrew', we now print help screen
          and exit (closes #45)
        - fix bug in results(), where the regex wasn't capturing properly on
          Windows
        - added blurb in SYNOPSIS about the importance of having a central
          cpanm (closes #44)
        - we now re-check brew_info after an install, so we don't exit
          prematurely thinking no perls are installed, even after a --new 1
          (closes #46)

1.03_02 2016-03-26
        - FAIL strategy completed. If there's STDERR output, we write it all to
          brewbuild_err.bblog. FAIL reports go into $perlver.bblog, and if
          we're using a plugin that accepts a module, we put fail reports into
          Tested::Module-$perlver.bblog, with the '::' replaced into '-'. The
          results (PASS and FAIL) are now all displayed at the end of output
          for easy identification (closes #43)
        - fixed case-insensitivity bug with options. -R and -r now do the
          respective Right Thing
        - cpanm is now called with the -v flag on the --test-only portion of
          the default plugin

1.03_01 2016-03-25
        - if --args is passed in, brewbuild runs the number of times the list
          has elements, and on each pass, the plugin receives the current arg
          in the list
        - --args executes --new and --remove only on first run through the loop
        - plugins now get a copy of the parent log for cloning
        - added --revdep, tests all CPAN reverse dependencies on the module